# promptRAG

./: .gitignore  LICENSE  README.md  environment.yml  example_notebook.ipynb  example_script.py  phi3_mlx.py  pyproject.toml
.github/: copilot-instructions.md
configs/: covid_poynter.yaml  wolf_archive.yaml
docs/: decision-log.md  plan-phase2.md  plan.md  research.md
scripts/: test_full_pipeline.py  test_retrieval.py
src/: create_vdb.py  promptTemplate.txt  prompt_generator.py  text_preprocess.py  transformer_playground.py
src/prompt_templates/: promptTemplate.txt  promptTemplate_mistral_onthefly.txt
src/promptrag/: __init__.py  chunker.py  cli.py  embeddings.py  evaluation.py  llm_backend.py  pipeline.py  prompt_engine.py  vector_store.py
tests/: test_chunker.py  test_embeddings.py  test_evaluation.py  test_vector_store.py
