[project]
name = "promptrag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5",
    "transformers>=4.47",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "numpy>=1.26",
    "polars>=1.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "connectorx>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pandas>=2.0",
]

[project.scripts]
promptrag = "promptrag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promptrag"]
